Added (german) translation for month names in yearbyyear chart.

--- a/translations/de.yml
+++ b/translations/de.yml
@@ -14,3 +14,16 @@ City: Stadt
 "Computer": "Computer"
 "Tablet": "Tablet"
 "Phone": "Telefon"
+"Months":
+    "Jan": "Jan"
+    "Feb": "Feb"
+    "Mar": "Mär"
+    "Apr": "Apr"
+    "May": "Mai"
+    "Jun": "Jun"
+    "Jul": "Jul"
+    "Aug": "Aug"
+    "Sep": "Sep"
+    "Oct": "Okt"
+    "Nov": "Nov"
+    "Dec": "Dez"
