--- a/translations/en.yml
+++ b/translations/en.yml
@@ -14,3 +14,16 @@ City: City
 "Computer": "Computer"
 "Tablet": "Tablet"
 "Phone": "Phone"
+"Months":
+    "Jan": "Jan"
+    "Feb": "Feb"
+    "Mar": "Mar"
+    "Apr": "Apr"
+    "May": "May"
+    "Jun": "Jun"
+    "Jul": "Jul"
+    "Aug": "Aug"
+    "Sep": "Sep"
+    "Oct": "Oct"
+    "Nov": "Nov"
+    "Dec": "Dec"
