Modified googleanalytics.js: on sites with no traffic response.rows will be undefined, giving us a TypeError: 'forEach' of undefined" in renderTopCitiesChart, renderNewReturningChart and renderMobileChart. Fixed by checking rows length and printing a grey doughnut chart with the label "No data" if empty.

--- a/translations/de.yml
+++ b/translations/de.yml
@@ -14,6 +14,7 @@ City: Stadt
 "Computer": "Computer"
 "Tablet": "Tablet"
 "Phone": "Telefon"
+"No data": "Keine Daten"
 "Months":
     "Jan": "Jan"
     "Feb": "Feb"
