--- a/translations/en.yml
+++ b/translations/en.yml
@@ -14,6 +14,7 @@ City: City
 "Computer": "Computer"
 "Tablet": "Tablet"
 "Phone": "Phone"
+"No data": "No data"
 "Months":
     "Jan": "Jan"
     "Feb": "Feb"
