Added Dutch translations and updated English translations

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -2,6 +2,8 @@ Statistics: Statistics
 "Unique visitors this month compared to last month": "Unique visitors this month compared to last month"
 "Unique visitors this year compared to last year": "Unique visitors this year compared to last year"
 City: City
+"Pageviews last week": "Pageviews last week"
+"Pageviews this week": "Pageviews this week"
 "Visitor type": "Visitor type"
 "Device type": "Device type"
 "Active visitors right now": "Active visitors right now"
