Added missing translations for English language file

--- a/translations/en.yml
+++ b/translations/en.yml
@@ -2,8 +2,6 @@ Statistics: Statistics
 "Unique visitors this month compared to last month": "Unique visitors this month compared to last month"
 "Unique visitors this year compared to last year": "Unique visitors this year compared to last year"
 City: City
-"Pageviews last week": "Pageviews last week"
-"Pageviews this week": "Pageviews this week"
 "Visitor type": "Visitor type"
 "Device type": "Device type"
 "Active visitors right now": "Active visitors right now"
@@ -14,6 +12,13 @@ City: City
 "New visitors": "New visitors"
 "Returning visitors": "Returning visitors"
 "Computer": "Computer"
+"Pageviews last week": "Pageviews last week"
+"Pageviews this week": "Pageviews this week"
+"Visits last week": "Visits last week"
+"Visits this week": "Visits this week"
+"More statistics": "More statistics"
+"Visitors/Pageviews in the last 7 days.": "Visitors/Pageviews in the last 7 days."
+"Visitors in the last 7 days, compared to the previous week": "Visitors in the last 7 days, compared to the previous week"
 "Tablet": "Tablet"
 "Phone": "Phone"
 "No data": "No data"
